# forecast_factory_streamlit

./: .gitignore  README.md  pyproject.toml
data/: exported_dataframe.csv  gas_TTF_EUR.xlsx
src/: app.py
src/helpers/: helper_functions.py
src/utils/: utility_functions.py
