[project]
name = "forecast-factory-streamlit"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.42.2,<2.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "prophet (>=1.1.6,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "watchdog (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
